syntax = "proto3";

package io.aggregator.view;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "kalix/annotations.proto";
import "google/protobuf/timestamp.proto";
import "io/aggregator/entity/transaction_entity.proto";
import "io/aggregator/view/transaction.proto";

option java_outer_classname = "TransactionsNotPaidByDateModel";

service TransactionsNotPaidByDate {
  option (kalix.codegen) = {
    view: {}
  };

  rpc GetTransactionsNotPaidByDate(TransactionsNotPaidByDateRequest) returns (TransactionsNotPaidByDateResponse) {
    option (kalix.method).view.query = {
      query: "SELECT * AS transactions"
             "  FROM transactions_not_paid_1 OFFSET :transaction_offset LIMIT :transaction_limit"
             " WHERE transaction_timestamp >= :from_date"
             "   AND transaction_timestamp < :to_date"
             "   AND payment_id = ''"
    };
    option (google.api.http) = {
      get: "/transactions-not-paid-by-date"
    };
  }

  rpc OnTransactionCreated(entity.TransactionCreated) returns (Transaction) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "transaction"
    };
    option (kalix.method).view.update = {
      table: "transactions_not_paid_1"
      transform_updates: true
    };
  }

  rpc OnPaymentAdded(entity.PaymentAdded) returns (Transaction) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "transaction"
    };
    option (kalix.method).view.update = {
      table: "transactions_not_paid_1"
      transform_updates: true
    };
  }

  rpc IgnoreOtherEvents(google.protobuf.Any) returns (Transaction) {
    option (kalix.method).eventing.in = {
      event_sourced_entity: "transaction"
    };
    option (kalix.method).view.update = {
      table: "transactions_not_paid_1"
      transform_updates: true
    };
  }
}

message TransactionsNotPaidByDateRequest {
  google.protobuf.Timestamp from_date = 1;
  google.protobuf.Timestamp to_date = 2;
  int32 transaction_offset = 3;
  int32 transaction_limit = 4;
}

message TransactionsNotPaidByDateResponse {
  repeated Transaction transactions = 1;
}
